# rptemp

./: .gitignore  README.md
.github/workflows/: build.yml  ci.yml
rptemp_client/: Cargo.toml  README.md
rptemp_client/example/: config.yml  rptemp_clnt.service
rptemp_client/src/: main.rs
rptemp_monitor/: Cargo.toml  README.md
rptemp_monitor/example/: 99-rptemp-fan-controller.rules  config.yml  rptemp_mon.service
rptemp_monitor/src/: main.rs
